--- a/res/layout/keypad.xml
+++ b/res/layout/keypad.xml
@@ -4,7 +4,7 @@
 	android:id="@+id/keypad"
 	android:orientation="vertical"
 	android:layout_width="wrap_content"
-	android:layour_height="wrap_content"
+	android:layout_height="wrap_content"
 	android:stretchColumns="*">
 	<TableRow>
 		<Button android:id="@+id/keypad_1"
